tests/e2e/keyword_not_service_argument.error
Error: syntax error in story at line 1, column 20

1|    http fetch url: "" not: "" // Idea is to demonstrate argument `not` is parsed successfully.
                         ^^^^^^^

E0141: http action `fetch` does not accept argument `not`.
