tests/e2e/keyword_not_service_argument.story
http fetch url: "" not: "" // Idea is to demonstrate argument `not` is parsed successfully.
